Added Section Title And Title And Made 4 section and used grid

--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 </head>
 
 <body>
-    <h1 id="sectionTitle">Why Choose Us</h1>
+    <div id="container">
+        <h1 id="title">Why Choose Us</h1>
+        <div id="sectionContainer">
+            <div id="section1" class="shared-section">
+                <h1 class="sectiontitle">Empower, Explore, Excel</h1>
+            </div>
+            <div id="section2" class="shared-section">
+                <h1 class="sectiontitle">Striking the Perfect Balance</h1>
+            </div>
+            <div id="section3" class="shared-section">
+                <h1 class="sectiontitle">Voices Echo, Friendships Bloom</h1>
+            </div>
+            <div id="section4" class="shared-section">
+                <h1 class="sectiontitle">Experience Meets Expertise</h1>
+            </div>
+        </div>
+
+    </div>
     <script src="index.js"></script>
 </body>
 
