Fixed the tiitle position and added linear gradient

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         <h1 id="title">Why Choose Us</h1>
         <div id="sectionContainer">
             <div id="section1" class="shared-section">
-                <h1 class="sectiontitle">Empower, Explore, Excel</h1>
+                <h1 class="sectionTitle"><span class="titleYellow">Empower</span>, Explore, <span
+                        class="titleYellow">Excel</span></h1>
             </div>
             <div id="section2" class="shared-section">
-                <h1 class="sectiontitle">Striking the Perfect Balance</h1>
+                <h1 class="sectionTitle">Striking the <span class="titleYellow">Perfect Balance</span></h1>
             </div>
             <div id="section3" class="shared-section">
-                <h1 class="sectiontitle">Voices Echo, Friendships Bloom</h1>
+                <h1 class="sectionTitle"><span class="titleYellow">Voices Echo</span>, Friendships Bloom</h1>
             </div>
             <div id="section4" class="shared-section">
-                <h1 class="sectiontitle">Experience Meets Expertise</h1>
+                <h1 class="sectionTitle">Experience Meets <span class="titleYellow">Expertise</span></h1>
             </div>
         </div>
 
