Added Section Content And Comment On The Css File

--- a/index.html
+++ b/index.html
@@ -14,20 +14,44 @@
 
 <body>
     <div id="container">
-        <h1 id="title">Why Choose Us</h1>
+        <h1 id="title"><span style="color: #114A8D;">Why</span> Choose Us</h1>
         <div id="sectionContainer">
-            <div id="section1" class="shared-section">
-                <h1 class="sectionTitle"><span class="titleYellow">Empower</span>, Explore, <span
-                        class="titleYellow">Excel</span></h1>
+            <div class="shared-section" id="section1">
+                <h1 class="sectionTitle">Holistic <span class="styledTitle">Development</span></h1>
+                <div class="sectionContent">
+                    <h1 class="sectionTitleAfter"><span class="styledTitle">Empower</span>, Explore, <span
+                            class="styledTitle">Excel</span></h1>
+                    <p class="sectionDescription">Right Mix of Curricular and Co-Curricular Activities.</p>
+                </div>
             </div>
+
             <div id="section2" class="shared-section">
-                <h1 class="sectionTitle">Striking the <span class="titleYellow">Perfect Balance</span></h1>
+                <h1 class="sectionTitle"><span class="styledTitle">Proven</span> and <span
+                        class="styledTitle">Tested</span> <br> Centralized Curriculum</h1>
+                <div class="sectionContent">
+                    <h1 class="sectionTitleAfter"><span class="styledTitle">Proven</span> and <span
+                            class="styledTitle">Tested</span> <br> Centralized Curriculum</h1>
+                    <p class="sectionDescription">CBSE school with balanced traditional & contemporary curriculum to
+                        foster growth in all its students.</p>
+                </div>
             </div>
             <div id="section3" class="shared-section">
-                <h1 class="sectionTitle"><span class="titleYellow">Voices Echo</span>, Friendships Bloom</h1>
+                <h1 class="sectionTitle"><span class="styledTitle">Innovative</span> and <span
+                        class="styledTitle">Challenging</span> learning Methodologies</h1>
+                <div class="sectionContent">
+                    <h1 class="sectionTitleAfter"><span class="styledTitle">Innovative</span> and <span
+                            class="styledTitle">Challenging</span> learning Methodologies</h1>
+                    <p class="sectionDescription">Facilitate excellence through critical thinking and profound learning.
+                    </p>
+                </div>
             </div>
             <div id="section4" class="shared-section">
-                <h1 class="sectionTitle">Experience Meets <span class="titleYellow">Expertise</span></h1>
+                <h1 class="sectionTitle"><span class="styledTitle">Faculty</span> Enrichment Program</h1>
+                <div class="sectionContent">
+                    <h1 class="sectionTitleAfter"><span class="styledTitle">Faculty</span> Enrichment Program</h1>
+                    <p class="sectionDescription">Regular teacher training and curriculum workshops
+                    </p>
+                </div>
             </div>
         </div>
 
